backend/_k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-backend
spec:
  selector:
    app: todo-app-backend
  ports:
  - port: 3000
    targetPort: 3000
