backend/_k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-backend
  labels:
    name: todo-app-backend
spec:
  rules:
  - host: todo-app.example.local
    http:
      paths:
      - pathType: Prefix
        path: "/api/todos"
        backend:
          service:
            name: todo-app-backend
            port: 
              number: 3000
